--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -19,9 +19,8 @@
       <input placeholder="Enter location ..." type="text">
       <button>Search</button>
   </form>
-  </div>
-  <div>
     <p id="success"></p>
+    <p id="success2"></p>
     <p id="error"></p>
   </div>
   
